# sample-tauri

./: .gitignore  README.md  tauri.md
dual-x/: extended.html  package-lock.json  package.json  vite.config.ts
dual-x-electron/: ext.html  main.html  main.js  package-lock.json  package.json  vite.config.ts
dual-x/src/: App.tsx  extended.css  extended.tsx
dual-x/src-tauri/: Cargo.toml  tauri.conf.json
dual-x/src-tauri/src/: main.rs
v-update/: package-lock.json  package.json
v-update-error1/: package-lock.json  package.json
v-update-error1/src/: App.tsx
v-update-error1/src-tauri/: Cargo.toml  tauri.conf.json
v-update-error1/src-tauri/src/: main.rs
v-update-error1/staticServer/: update.json
v-update/server/: update.json
v-update/src/: App.tsx
v-update/src-tauri/: Cargo.toml  tauri.conf.json
v-update/src-tauri/src/: main2.rs
