[package]
name = "v-update"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "process-relaunch", "process-exit", "fs-create-dir", "dialog-open", "path-all", "fs-read-dir", "shell-open", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
rust-crypto = "^0.2"
uuid = { version = "1.0", features = ["v4"] }
sysinfo = "0.23.10"

[features]
default = ["custom-protocol"]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
